# superfx

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  bind.c  bind.h  build.sh  changes.diff  client.c  cmake_install.cmake  collision.c  collision.h  console.c  console.h  dump.rdb  entity.h  hex.c  input.c  input.h  leaks  model.h  model2.h  obj2c  obj2c.c  package-lock.json  parse.c  parse.h  ply2c.c  ray_line.c  resources.c  resources.h  server.lua  shader.frag  shader.vert  shader2.frag  starfox.ply  superfx  superfx.c  superfx.h  (+10 more)
gl-matrix/: mat4.c
gl-matrix.c/: gl-matrix.h  mat4.c  vec3.c
models/: beam.blend  beam.blend1  beam.ply  box.blend  box.blend1  box.ply  bridge.blend  bridge.blend1  bridge.ply  building1.blend  building1.blend1  building1.ply  convex_hull.py  elevator.blend  elevator.blend1  elevator.ply  elevator_top.blend  export_level.py  export_ply.py  ground.blend  ground.blend1  ground.ply  hex.blend  hex.ply  level.blend  level.blend1  level.dae  level.lua  level.txt  level1.lua  logo.ply  parse_scene.rb  platform.blend  platform.ply  rectangle.blend  rectangle.blend1  rectangle.ply  ring.blend  ring.blend1  ring.ply  (+19 more)
scripts/: arwing.lua  camera.lua  explosion.lua  ground.lua  intro.lua  intro_screen.lua  level.lua  level1.lua  main.lua  projectile.lua  quad.lua  ring.lua  sprite.lua  target.lua  training1.lua  utils.lua  worldspawn.lua
shaders/: model.frag  model.vert  quad.frag  shader.frag  shadow.frag  shadow.vert
shaders_memoir44/: model_colored.frag  model_textured.frag  sprite.frag  sprite.vert
(+11 files in other folders)
